<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TestApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nosaukums">Testēšasas aplikācija v0.5</string>
    <string name="start_button">Veikt testu</string>
    <string name="send_button">Sūtīt datus</string>
    <string name="callDrop">Pārtrūkst zvans</string>
    <string name="faultTitle">Atzīmējiet esošās problēmas:</string>
    <string name="phoneNum">Ievadiet kontakttālruni šajā logā</string>
    <string name="personBquiet">Nedzirdu sarunas biedru</string>
    <string name="personAquiet">Sarunas biedrs nedzird mani</string>
    <string name="badSound">Slikta dzirdamība (atbalss, trokšņi u.t.t.)</string>
    <string name="slowNet">Lēns internets</string>
    <string name="comment">Jūsu komentāri (nav obligāti)</string>
    <string name="serverIp">52.28.111.52</string>
    <string name="serverPort">4848</string>
</resources>
