<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/nosaukums"/>

    <TextView
        android:id="@+id/phoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Title"
        android:enabled="true"
        android:text="@string/phoneNum"/>

    <CheckBox
        android:id="@+id/callDrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/personBquiet"
        android:checked="false"
        android:text="@string/callDrop"/>

    <TextView
        android:id="@+id/faultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/phoneBox"
        android:enabled="false"
        android:text="@string/faultTitle"/>

    <CheckBox
        android:id="@+id/personBquiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/faultTitle"
        android:checked="false"
        android:text="@string/personBquiet"/>

    <CheckBox
        android:id="@+id/personAquiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/callDrop"
        android:checked="false"
        android:text="@string/personAquiet"/>

    <CheckBox
        android:id="@+id/badSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/personAquiet"
        android:checked="false"
        android:text="@string/badSound"/>

    <CheckBox
        android:id="@+id/slowNet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/badSound"
        android:checked="false"
        android:text="@string/slowNet"/>

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/slowNet"
        android:editable="false"
        android:enabled="true"
        android:text="@string/comment"/>

    <EditText
        android:id="@+id/phoneBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/phoneNum"
        android:ems="10"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/commentBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/comment"
        android:ems="10"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/commentBox"
        android:enabled="true"
        android:text="@string/send_button"/>
</RelativeLayout>
